<resources>
    <string name="app_name">OttU</string>

    <string name="logo">logo</string>
    <string name="nickname">닉네임</string>
    <string name="submit">제출</string>
    <string name="apply">적용</string>
    <string name="ok">확인</string>
    <string name="confirmed">확정</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="terminate">해지</string>
    <string name="ott_service">OTT Service</string>
    <string name="comment">Comment</string>
    <string name="content">content 내용</string>
    <string name="notice">알림</string>
    <string name="next">Next</string>

    <string name="nav_community">커뮤니티</string>
    <string name="nav_recruit">팀원 찾기</string>
    <string name="nav_home">Home</string>
    <string name="nav_notice">알림</string>
    <string name="nav_mypage">마이페이지</string>

    <string name="ott_netflix">Netflix</string>
    <string name="ott_tving">Tving</string>
    <string name="ott_wavve">Wavve</string>
    <string name="ott_watcha">Watcha</string>
    <string name="ott_disneyplus">Disney Plus</string>
    <string name="ott_coupangplay">Coupang Play</string>

    <string name="nickname_rule1">닉네임에 공백이 포함되어 있습니다.</string>
    <string name="nickname_rule2">닉네임을 입력하지 않았습니다.</string>
    <string name="nickname_rule3">닉네임은 2자 이상 12자 이하여야 합니다.</string>
    <string name="nickname_rule4">닉네임에 영문 소문자 혹은 한글이 1글자 이상 있어야 합니다.</string>
    <string name="nickname_rule5">영문 소문자/한글/숫자/_/* 이외의 문자는 사용 불가합니다:)</string>

    <string name="recruit_ing">모집 중</string>
    <string name="recruit_completed">모집 완료</string>
    <string name="recruit_participated">참여 완료</string>

    <string name="post_edit">글 수정</string>
    <string name="post_delete">글 삭제</string>

    <string name="genre_1">드라마</string>
    <string name="genre_2">멜로/로맨스</string>
    <string name="genre_3">범죄</string>
    <string name="genre_4">스릴러</string>
    <string name="genre_5">사극</string>
    <string name="genre_6">성인/애로</string>
    <string name="genre_7">애니메이션</string>
    <string name="genre_8">액션</string>
    <string name="genre_9">코미디</string>
    <string name="genre_10">판타지</string>
    <string name="genre_11">SF</string>
    <string name="genre_12">기타</string>

    <string name="filter_all">전체</string>
    <string name="filter_headcount_1">1</string>
    <string name="filter_headcount_2">2</string>
    <string name="filter_headcount_4">4</string>
    <string name="filter_completed_false">진행 중</string>
    <string name="filter_completed_true">완료</string>

    <string name="participate_question">참여 요청하시겠습니까?</string>
    <string name="participate_notice1">*요청 시 작성자에게 카카오 아이디가 공개되며,\n이를 통해 팀원 간 연락이 가능합니다.</string>
    <string name="participate_notice2">작성자가 요청 수락 시, 팀원으로 모집됩니다.</string>
    
    <string name="recruiting_select_rateplan">요금제 선택</string>
    <string name="recruiting_step_in_progress">진행 방법</string>
    <string name="recruiting_1">1. </string>
    <string name="recruiting_2">2. </string>
    <string name="recruiting_3">3. </string>
    <string name="recruiting_4">4. </string>
    <string name="recruiting_1_content">참여자 모집 글 작성</string>
    <string name="recruiting_2_content">참여자 중 팀원 선택</string>
    <string name="recruiting_2_content2">*오뜨 Level과 프로필을 참고하세요.</string>
    <string name="recruiting_3_content">팀원 선택 후, 팀원의 카카오 아이디 확인</string>
    <string name="recruiting_4_content">1주일 내로, 팀원들과 소통 후 결제 일자 입력</string>
    <string name="recruiting_notice1">*팀원 중 한 명이라도 해지 의사를 밝히면 팀은 해체됩니다.</string>
    <string name="recruiting_notice2">*팀 해체 시, 오뜨 level에 적용되는 팀원 간의 평가가 이루어집니다.</string>
    <string name="recruiting_check">위 사항들을 확인했습니다.</string>
    <string name="recruiting_submit">모집 작성</string>

    <string name="mypage_my_ottu">나의 OttU</string>
    <string name="mypage_my_recruit">내가 작성한 모집글</string>
    <string name="mypage_my_community_post">내가 작성한 커뮤니티 글</string>
    <string name="mypage_my_ott_service">내가 이용하는 OTT 서비스</string>
    <string name="mypage_my_information">내 정보</string>
    <string name="mypage_change_nick">닉네임 변경</string>
    <string name="mypage_change_genre">관심 장르 변경</string>
    <string name="mypage_change_kakaotalk_id">카카오톡 아이디 변경</string>
    <string name="mypage_account">계정</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_withdrawal">회원 탈퇴</string>
    
    <string name="change_nick_rule">[ 오뜨유 닉네임 규칙 ]</string>
    <string name="change_nick_rule1">· 닉네임은 2자 이상 12자 이하로 사용 가능</string>
    <string name="change_nick_rule2">· 소문자(a–z), 숫자, 한글, _* 사용 가능</string>

    <string name="change_kakaotalk_id_info">[ 오뜨유에서의 카카오톡 아이디 ]</string>
    <string name="change_kakaotalk_id_info1">- 해당 카톡 아이디는 모집에서 사용됩니다.</string>
    <string name="change_kakaotalk_id_info2">- 모집 완료 시 모집자가 팀원들의 카톡 아이디를 받게 됩니다.</string>
</resources>