<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_r5white"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/participate_question"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participate_notice1"
        android:textAlignment="center"
        android:textColor="@color/red_notice"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participate_notice2"
        android:textAlignment="center"
        android:textColor="@color/sub_text_color"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_dialog_participate_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bt_yes"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/ok"
            android:textColor="@color/light_grey2"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <View
            android:layout_width="30dp"
            android:layout_height="0dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_dialog_participate_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bt_no"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/cancel"
            android:textColor="@color/red_notice"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
