<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_recruiting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_r5white"
                android:backgroundTint="@color/bg_black_color2"
                android:orientation="vertical"
                android:padding="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recruiting_select_charge"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_recruiting_charge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:nestedScrollingEnabled="false" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_r5white"
                android:backgroundTint="@color/bg_black_color2"
                android:orientation="vertical"
                android:padding="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recruiting_step_in_progress"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_r5black"
                    android:layout_marginTop="15dp"
                    android:padding="20dp">
                    <TextView
                        android:id="@+id/tv_recruiting_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/recruiting_1"
                        android:textAlignment="viewStart"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/tv_recruiting_1"
                        android:text="@string/recruiting_1_content"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/main_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_r5black"
                    android:layout_marginTop="15dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">
                    <TextView
                        android:id="@+id/tv_recruiting_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/recruiting_2"
                        android:textAlignment="viewStart"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/tv_recruiting_2"
                        android:gravity="end"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recruiting_2_content"
                            android:textColor="@color/main_color"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/recruiting_2_content2"
                            android:textSize="12sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_r5black"
                    android:layout_marginTop="15dp"
                    android:padding="20dp">
                    <TextView
                        android:id="@+id/tv_recruiting_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/recruiting_3"
                        android:textAlignment="viewStart"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/tv_recruiting_3"
                        android:text="@string/recruiting_3_content"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/main_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_r5black"
                    android:layout_marginTop="15dp"
                    android:padding="20dp">
                    <TextView
                        android:id="@+id/tv_recruiting_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/recruiting_4"
                        android:textAlignment="viewStart"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/tv_recruiting_4"
                        android:text="@string/recruiting_4_content"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/main_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/recruiting_notice1"
                android:textColor="@color/red_notice"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/recruiting_notice2"
                android:textColor="@color/red_notice"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="15dp">
                <CheckBox
                    android:id="@+id/cb_recruiting_agree"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/checkbox_design"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/recruiting_check"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_recruiting_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/recruiting_submit"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>