<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/tv_item_mypage_community_time">
            <ImageView
                android:id="@+id/iv_item_mypage_community_platform"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:contentDescription="@string/ott_service"
                android:scaleType="fitXY"
                android:src="@drawable/icon_ott_netflix" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_item_mypage_community_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:text="1시간 전"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/tv_item_mypage_community_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:lineSpacingExtra="2dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:singleLine="false"
        android:text="@string/content"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clickable="true"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="center_vertical"
            android:padding="3dp"
            android:src="@drawable/icon_comment"
            android:contentDescription="@string/comment"
            app:tint="@color/white" />
        <TextView
            android:id="@+id/tv_item_mypage_community_comment_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:text="5"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
